# CPPProjects

./: README.md
BasicBlocks/: .gitignore  CMakeLists.txt  build.sh  buildV.ps1  build_copy.sh  clean.ps1
BasicBlocks/App/: CMakeLists.txt  main.cpp
BasicBlocks/App/TestEngine/header/: sMathTester.h
BasicBlocks/App/TestEngine/source/: sDSATester.cpp  sMathTester.cpp
BasicBlocks/App/TestFactory/header/: STestFactory.h
BasicBlocks/App/TestFactory/source/: STestFactory.cpp
BasicBlocks/App/header/: sDSATester.h  sHashTester.h  sQueueTester.h  sStackTester.h  sStringTester.h  sTuplePairTester.h
BasicBlocks/App/implementation/: sStackTester.cpp  sStringTester.cpp  sVectorTester.cpp
BasicBlocks/App/interface/: ITestRunner.h
BasicBlocks/App/sDSATesters/header/: sListTester.h  sVectorTester.h
BasicBlocks/App/sDSATesters/source/: sHashTester.cpp  sListTester.cpp  sQueueTester.cpp  sTuplePairTester.cpp
BasicBlocks/App/sMathTesters/header/: sCalcTester.h  sComplexTester.h
BasicBlocks/App/sMathTesters/source/: sCalcTester.cpp  sComplexTester.cpp
BasicBlocks/DSA/: CMakeLists.txt
BasicBlocks/DSA/header/: SHashMap.h  SList.h  SListStackT.h  SListT.h  SMapDictionary.h  SPair.h  SQueue.h  SQueueT.h  SStack.h  SStackT.h  SString.h  STuple.h  STupleGet.h  SVector.h  SVectorT.h
BasicBlocks/DSA/source/: SHashMap.tpp  SList.cpp  SListStackT.tpp  SListT.tpp  SMapDictionary.tpp  SQueue.cpp  SQueueT.tpp  SStack.cpp  SStackT.tpp  SString.cpp  SVector.cpp  SVectorT.tpp
BasicBlocks/Documentation/: App_Design_Document.md  Commands.txt  SDSATest_Design_Document.md  SHashMap_Design_Document.md  SMapDictionary_Design_Document.md
BasicBlocks/Dpcumentation/: Commands.txt
BasicBlocks/SMathLib/: CMakeLists.txt  SMathLib.cpp  SMathLib.h
BasicBlocks/SMathLib/MathOperations/Header/: SCalculator.h  SComplex.h
BasicBlocks/SMathLib/MathOperations/Source/: SCalculator.cpp  SComplex.cpp
